--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ img {
 
 #home {
     background-color: red;
+    padding-bottom: 10px;
 }
 
 .main-nav li, a, ul {
@@ -42,8 +43,13 @@ img {
     list-style: none;
     padding-left: 0;
     margin-top: 20px;
+    margin-bottom: 20px;
     text-align: center;
     width: 100%;
+    letter-spacing: 0.05em;
+    background-color: #fff;
+    padding: 25px;
+    border-color: black;
   }
 
   h1 {
