--- a/css/styles.css
+++ b/css/styles.css
@@ -31,39 +31,56 @@ img {
 
 
 #home {
-    background-color: red;
+    background-color: #FAFAFA;
     padding-bottom: 10px;
 }
 
-.main-nav li, a, ul {
+.main-nav, li, ul {
     
     text-transform: uppercase;
     text-decoration: none;
-    color: #000;
+    color: #4A4A4A;
     list-style: none;
-    padding-left: 0;
-    margin-top: 20px;
-    margin-bottom: 20px;
     text-align: center;
     width: 100%;
     letter-spacing: 0.05em;
-    background-color: #fff;
-    padding: 25px;
-    border-color: black;
+    background-color: #FAFAFA;
+    padding: 7px;
+    margin: 5px 1px 5px 1px;
+    
   }
 
+  a {
+    text-decoration: none;
+    color: #000;
+  }
   h1 {
     text-align: center;
     color: #000;
     margin: 0;
-    padding-top: 10px;
+    padding: 18px;
    
+  }
+
+  li {
+    font-weight: bolder;
+    background-color: #FFFFFF;
   }
 /* Layout Containers */
 
 .container {
-    width: 70%;
+   /* width: 70%; */
+   padding: 10px;
+  max-width: 1100px;
     margin: 0 auto;
+}
+
+.box {
+    margin: 10px;
+    min-height: 250px;
+    text-align: center;
+    letter-spacing: 1px;
+    padding-top: 5px;
 }
 
 .main-footer {
