--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@
 
 * {
     box-sizing: border-box;
+    text-decoration: none;
+    color: black;
 }
 
 body {
@@ -41,8 +43,6 @@ img {
 }
 
 .main-nav, li, ul {
-    
-    text-transform: uppercase;
     text-decoration: none;
     color: #4A4A4A;
     list-style: none;
@@ -83,9 +83,6 @@ img {
     padding: 10px;
   }
 
-  #footer {
-    background-color: #FAFAFA;
-  }
  #profile {
     background-color: #FAFAFA;
     margin: 0;
@@ -100,7 +97,8 @@ img {
     color: #000;
     font-size: 14px;
   }
-/* Layout Containers */
+
+  /* Layout Containers */
 
 .container {
   max-width: 1100px;
@@ -115,17 +113,21 @@ img {
     padding-top: 5px;
 }
 
-.main-footer {
-    background-color: #FAFAFA;
-    
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-top: auto;
-        padding: 0 20px;
-        height: 100px;
-        background-color: #FAFAFA;
+.hr {
+box-sizing: content-box;
+height: 0;
+}
 
+.main-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: auto;
+  margin-bottom: auto;
+  padding: 0 10px;
+  height: 60px;
+  background-color: #FAFAFA;
+  font-size: 12px;
 }
 
 /* Media Queries */
