--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,10 @@ img {
     width: 290px;
 }
 
+a {
+  font-weight: bolder;
+}
+
 .push {
     min-height: calc(100vh - 89px);
     
@@ -47,7 +51,6 @@ img {
     color: #4A4A4A;
     list-style: none;
     text-align: center;
-    width: 100%;
     letter-spacing: 0.05em;
     background-color: #FAFAFA;
     padding: 7px;
@@ -59,8 +62,7 @@ img {
   h1 {
     text-align: center;
     color: #000;
-    margin: 0;
-    padding: 18px;
+    padding: 5px;
    
   }
 
@@ -134,11 +136,47 @@ height: 0;
 
 @media (min-width: 768px) {
     .container {
-        width: 70%;
+        width: 100%;
         max-width: 1000px;
         margin: 0 auto;
         background-color: aqua;
+        display: flex;
+        flex-direction: column;
     }
+
+    .main-nav {
+      display: flex;
+      flex-direction: row;
+    }
+li {
+  background-color: #FAFAFA;
+  display: flex;
+  justify-content: center;
+}
+
+ul {
+  display: flex;
+  justify-content: center;
+}
+    h1 {
+      text-align: center;
+      color: #000;
+      padding-top: 25px;
+      margin-bottom: 0;
+     
+    }
+
+    #profile {
+      background-color: red;
+      width: 100%;
+      margin: 0;
+      text-decoration: none;
+      color: #000;
+      font-size: 14px;
+      display: flex;
+      /* flex-shrink: 3; */
+  }
+  
       
       
       
