--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,8 @@ a {
     text-transform: uppercase;
     font-size: 14px;
     padding: 16px;
-    margin-top: 0;
+    display: flex;
+    justify-content: center;
 
   }
 
@@ -156,6 +157,7 @@ height: 0;
         flex-direction: column;
     }
 
+    
     .main-nav {
       display: flex;
       flex-direction: row;
@@ -177,6 +179,19 @@ ul {
       margin-bottom: 0;
      
     }
+p {
+  font-size: 13px;
+    letter-spacing: 0.05em;
+    padding: 15px 10px 15px 10px;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+  .dp {
+    width: 500px;
+    display: flex;
+  }
 
     .item {
       margin: 10px;
@@ -189,7 +204,7 @@ ul {
 
     #profile {
       background-color: red;
-      flex: 1;
+      flex-direction:row-reverse;
       width: 100%;
       margin: 0;
       text-decoration: none;
@@ -199,7 +214,9 @@ ul {
       /* flex-shrink: 3; */
   }
   
-      
+      .examples {
+        
+      }
       
       
     
