--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,11 @@ body {
 }
 
 img {
-    width: 290px;
+    width: 220px;
+}
+
+.eg {
+  width: 290px;
 }
 
 a {
@@ -71,14 +75,19 @@ a {
     font-size: 14px;
     padding: 16px;
     display: flex;
+    margin: 25px;
     justify-content: center;
 
   }
 
+  h3 {
+    margin-top: 25px;
+    margin-bottom: 0px;
+  }
   p {
-    font-size: 13px;
+    font-size: 16px;
     letter-spacing: 0.05em;
-    padding: 15px 10px 15px 10px;
+    padding: 30px 15px 30px 15px;
     margin: 0;
   }
   li {
@@ -95,10 +104,17 @@ a {
  }
   #contact {
     background-color: #FAFAFA;
-    margin: 0;
+    margin-top: 25px;
     text-decoration: none;
     color: #000;
     font-size: 14px;
+  }
+
+  .call {
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    
   }
 
   /* Layout Containers */
@@ -109,16 +125,17 @@ a {
 }
 
 .item {
-    margin: 10px;
-    min-height: 250px;
-    text-align: center;
-    letter-spacing: 1px;
-    padding-top: 5px;
+  min-height: 250px;
+  text-align: center;
+  letter-spacing: 1px;
+  padding-top: 5px;
 }
 
 .hr {
-box-sizing: content-box;
-height: 0;
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+  margin: 50px;
 }
 
 .main-footer {
@@ -214,10 +231,6 @@ p {
       /* flex-shrink: 3; */
   }
   
-      .examples {
-        
-      }
-      
       
     
 }
