--- a/css/styles.css
+++ b/css/styles.css
@@ -228,9 +228,13 @@ p {
       display: flex;
   }
 
+.examples {
+  display: flex;
+  max-width: 1100px;
+}
 
     #profile {
-      background-color: #FAFAFA;
+      background-color: red;
       flex-direction:row-reverse;
       width: 100%;
       margin: 0;
