Desktop in progress
- fix mobile dp
- tidy portfolio section in desktop

--- a/css/styles.css
+++ b/css/styles.css
@@ -179,7 +179,6 @@ a {
 }
     .container {
         width: 100%;
-        max-width: 1000px;
         margin: 0 auto; 
         background-color: #FFFFFF;
         display: flex;
@@ -285,7 +284,6 @@ justify-content: space-between;
 
 .name { 
   margin-right: auto;
-  margin-top: 10px;
 }
 
 .full { 
@@ -298,3 +296,38 @@ justify-content: space-between;
   padding: auto;
 }
 }
+
+@media (min-width: 1024px) {
+
+  body {
+    background-color: #FAFAFA;
+  }
+  #home {
+    display: flex;
+    padding: 20px;
+}
+
+.bio {
+  width: 550px;
+}
+
+#profile {
+  align-items: flex-start;
+}
+.dp {
+  width: 380px;
+    margin: 0;
+    margin-left: 30px;
+    margin-right: 18px;
+}
+
+.item {
+  flex-grow: 1;
+    flex-basis: 200px;
+    width: 300px;
+}
+
+.eg {
+  width: 320px;
+}
+} 
