--- a/css/styles.css
+++ b/css/styles.css
@@ -71,14 +71,16 @@ a {
 
  
   h1 {
+    font-family: 'Titan One';
     text-align: center;
-    color: #000;
+    color: #FCE374;
     padding: 5px;
     padding-top: 30px;
     margin-top: 0;
   }
 
   h2 {
+    font-family: 'Titan One';
     text-transform: uppercase;
     font-size: 14px;
     padding: 16px;
@@ -92,6 +94,12 @@ a {
     margin-top: 25px;
     margin-bottom: 0px;
   }
+
+  h4 {
+    font-family: 'Titan One';
+    text-align: center;
+  }
+
   p {
     font-size: 16px;
     letter-spacing: 0.05em;
@@ -101,6 +109,13 @@ a {
   li {
     background-color: #FFFFFF;
     padding: 10px;
+    transition: 0.3s;
+  }
+
+  li:hover {
+    background-color: #FCE374;
+    border: 10px;
+    border-color: black;
   }
 
  #profile {
@@ -121,7 +136,6 @@ a {
 }
   #contact {
     background-color: #FAFAFA;
-    margin-top: 25px;
     text-decoration: none;
     color: #000;
     font-size: 14px;
@@ -139,6 +153,7 @@ a {
 .container {
   max-width: 1100px;
     margin: 0 auto;
+    background-color: #FCE374;
 }
 
 .item {
@@ -153,6 +168,15 @@ a {
   height: 0;
   margin-top: 40px;
   overflow: visible;
+}
+
+#skills {
+  display: flex;
+    height: 250px;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #FAFAFA;
+
 }
 
 .main-footer {
@@ -189,7 +213,6 @@ a {
     .container {
         width: 100%;
         margin: 0 auto; 
-        background-color: #FFFFFF;
         display: flex;
         flex-direction: column;
     }
@@ -215,7 +238,6 @@ ul {
 }
     h1 {
       text-align: center;
-      color: #000;
       padding-top: 25px;
       margin-bottom: 0;
      
@@ -307,7 +329,6 @@ justify-content: space-between;
 
 .small {
   display: none;
-  padding: auto;
 }
 }
 
